// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid tests should render GifGrid correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    something
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid tests should render items when images is loaded from UseFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    something
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      img={
        Object {
          "id": "ABC",
          "title": "some title",
          "url": "https://somepage.com/some.jpg",
        }
      }
      key="ABC"
    />
  </div>
</Fragment>
`;
